--- a/papers/Cr/Cr.tex
+++ b/papers/Cr/Cr.tex
@@ -10,18 +10,18 @@ To this end, a 30nm thick Cr film was used in the experiments, harboring seven p
 \section{Theory}
 \lp{some explanation of Peierls instabilities etc, the things that cause the SDW in the first place?}
 
-To understand how modulation of bond lengths changes the magnetic exchange between spins of the constituent ions, it is instructive to recall where the Heisenberg exchange form comes from, namely the Hubbard model:
-\begin{equation}
-	H = \sum_{<i,j>}t_{ij} c_{i,\sigma}^{\dag} c_{j,\sigma}  +  U \sum_i U n_i^{\uparrow} n_i^{\downarrow}
-\end{equation}
-where $<i,j>$ denotes nearest neighbors, and $t_{ij}$ the hopping between them, and $U_i$ the on-site coulomb repulsion active when the on-site orbital is occupied by more than one electron. 
-In the usual case, $U >> t_{ij}$ and thus a Shrieffer-Wolf transformation can be performed to separate the high energy from the low energy subspace. This amounts to performing a second order perturbation theory, allowing the Hubbard model to effectively be rewritten in terms of the on-site spins, leading to the well-known Heisenberg model:
-\begin{equation}
-	\label{eq:Heisenberg}
-	H = \sum_{<i,j>}J_{ij} \mathbf{S}_i \cdot \mathbf{S}_j,
-\end{equation}
-with the coupling constant (often referred to as the magnetic exchange) $J_{ij}=t_{ij}^2/U$. Since hopping parameters are a result of the overlap between orbitals on neighboring sites, it is clear that they depend on the length of the bond $r$ between them, i.e. $t_{ij} \sim r$ to first order. 
-In materials where SDW are formed, this magnetostriction will lead to PLD leading to strain waves. 
+% To understand how modulation of bond lengths changes the magnetic exchange between spins of the constituent ions, it is instructive to recall where the Heisenberg exchange form comes from, namely the Hubbard model:
+% \begin{equation}
+% 	H = \sum_{<i,j>}t_{ij} c_{i,\sigma}^{\dag} c_{j,\sigma}  +  U \sum_i U n_i^{\uparrow} n_i^{\downarrow}
+% \end{equation}
+% where $<i,j>$ denotes nearest neighbors, and $t_{ij}$ the hopping between them, and $U_i$ the on-site coulomb repulsion active when the on-site orbital is occupied by more than one electron. 
+% In the usual case, $U >> t_{ij}$ and thus a Shrieffer-Wolf transformation can be performed to separate the high energy from the low energy subspace. This amounts to performing a second order perturbation theory, allowing the Hubbard model to effectively be rewritten in terms of the on-site spins, leading to the well-known Heisenberg model:
+% \begin{equation}
+% 	\label{eq:Heisenberg}
+% 	H = \sum_{<i,j>}J_{ij} \mathbf{S}_i \cdot \mathbf{S}_j,
+% \end{equation}
+% with the coupling constant (often referred to as the magnetic exchange) $J_{ij}=t_{ij}^2/U$. Since hopping parameters are a result of the overlap between orbitals on neighboring sites, it is clear that they depend on the length of the bond $r$ between them, i.e. $t_{ij} \sim r$ to first order. 
+% In materials where SDW are formed, this magnetostriction will lead to PLD leading to strain waves. 
 
 The geometry that is used in the experiment is such that a microscopic model as described above is unnecessary to describe the essential physics, since the Cr thin film can be considered to be homogeneous throughout the experiment. This allows us to instead adopt a continuum description utilizing a standard Landau theory with two order parameters describing the SDW ($L$) and PLD ($y$) and a coupling between them to describe the magnetostriction.  
 
