--- a/papers/Thesis.tex
+++ b/papers/Thesis.tex
@@ -66,7 +66,7 @@
 % % \Include{Theory}
 % \chapter{Charge order and spin-momentum locking in high spin-orbit coupled ferroelectrics}
 % \Include{Rashba}
-% \Include{Cr}
+\Include{Cr}
 \Include{GdMn2O5}
 % \Include{Softening}
 % \chapter{Strong coupling and ultrafast control of charge and spin density waves in elemental Chromium}
